frontend/src/App.css
@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&family=Ubuntu:wght@700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Montserrat", sans-serif;
}

body {
  background: rgb(17, 191, 202);
}

.page-wrapper {
  min-height: 100vh;
  background: linear-gradient(
    150deg,
    rgba(11, 226, 180, 0.7) 1.32%,
    rgba(17, 191, 202, 0.8) 88.52%
  );
  backdrop-filter: blur(10px);
}

header {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 5vh;
}

header h1 {
  font-family: "Ubuntu", sans-serif;
  font-style: normal;
  font-weight: 800;
  font-size: 2rem;
  letter-spacing: -0.05em;
  color: #05595f;
  margin-top: 15px;
}

a {
  text-decoration: none;
  font: inherit;
  color: inherit;
}

footer {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: 5vh;
  padding: 60px;
  background: #05595fda;
  margin-top: 25px;
  bottom: 0;
}

footer p {
  color: #ffffff;
  font-family: monospace;
  font-size: 1rem;
  font-weight: 600;
  margin-top: 10px;
}

footer a {
  text-decoration: underline;
}

.loading-container {
  min-height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
}

.loading-container h1 {
  color: #ffffff;
}

.loader {
  border: 5px solid #ffffff;
  border-top: 5px solid rgba(0, 0, 0, 0);
  border-radius: 50%;
  width: 30px;
  height: 30px;
  animation: spin 2s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.loading-container {
  min-height: 80vh;
}

.song-container {
  height: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;
  margin-top: 15px;
}

.title {
  font-style: normal;
  font-weight: 700;
  font-size: 3.2rem;
  text-align: center;
  color: #ffffff;
  padding: 5px;
}

.artist {
  font-style: normal;
  font-weight: 300;
  font-size: 1.3rem;
  text-align: center;
  color: #000000;
  padding: 5px;
  text-align: center;
}

.cover img {
  height: 400px;
  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.4);
}

.cover {
  padding: 10px;
}

.control-btn {
  padding: 10px 25px;
  border-style: none;
  border-radius: 25px;
  font-size: 1.1rem;
  font-weight: 500;
  cursor: pointer;
  transition: 0.1s ease;
}

.shuffle {
  background: #05595f;
  color: #ffffff;
}

.spotify {
  background: rgba(0, 0, 0, 0);
}

.spotify a {
  color: #034146;
  font-weight: 500;
}

.shuffle:hover {
  box-shadow: 0px 10px 20px rgba(255, 255, 255, 0.4);
}

.spotify a:hover {
  text-decoration: underline;
}

.warning {
  color: rgb(114, 13, 13);
  text-align: center;
}

@media only screen and (max-width: 600px) {
  .title {
    font-size: 2.5rem;
  }

  .cover img {
    height: 300px;
  }
  button {
    width: 60%;
  }
  .song-container {
    margin-top: 10%;
  }
}

@media only screen and (max-width: 850px) {
  .title {
    font-size: 2.5rem;
  }

  .cover img {
    height: 300px;
  }
  button {
    width: 60%;
  }
}

